fix: white space

--- a/src/form.css
+++ b/src/form.css
@@ -13,7 +13,7 @@ input[type="checkbox"] {
 }
 
 span {
-  white-space: normal;
+  white-space: pre;
 }
 
 .form {
